fixed z-index of header and table-head

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -7,6 +7,7 @@
   background-color: white;
   position: fixed;
   top: 0;
+  z-index: 10;
 }
 
 .op {
